[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=1]
[ext_resource path="res://themes/darktheme/fonts/Bangers/Bangers-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/wc/menus/MultiplayerJoin.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Menu" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Margin" type="MarginContainer" parent="MainMenu/VBox"]
margin_right = 1920.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 90

[node name="Label" type="Label" parent="MainMenu/VBox/Margin"]
margin_top = 90.0
margin_right = 1920.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 2 )
text = "JOIN GAME"
align = 1

[node name="Center" type="CenterContainer" parent="MainMenu/VBox"]
margin_top = 307.0
margin_right = 1920.0
margin_bottom = 775.0
size_flags_vertical = 3

[node name="VButtons" type="VBoxContainer" parent="MainMenu/VBox/Center"]
margin_left = 708.0
margin_right = 1212.0
margin_bottom = 468.0
rect_min_size = Vector2( 192, 0 )
custom_constants/separation = 10
alignment = 1

[node name="RoomsBox" type="VBoxContainer" parent="MainMenu/VBox/Center/VButtons"]
margin_right = 504.0
margin_bottom = 33.0

[node name="RoomsListHeader" type="Label" parent="MainMenu/VBox/Center/VButtons/RoomsBox"]
unique_name_in_owner = true
margin_right = 504.0
margin_bottom = 30.0
text = "Fetching Rooms - Please wait..."

[node name="Rooms" type="VBoxContainer" parent="MainMenu/VBox/Center/VButtons/RoomsBox"]
unique_name_in_owner = true
margin_top = 33.0
margin_right = 504.0
margin_bottom = 33.0

[node name="RefreshButton" type="Button" parent="MainMenu/VBox/Center/VButtons/RoomsBox"]
unique_name_in_owner = true
visible = false
margin_top = 29.0
margin_right = 482.0
margin_bottom = 119.0
text = "Refresh"

[node name="HSeparator2" type="HSeparator" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 43.0
margin_right = 504.0
margin_bottom = 165.0
custom_constants/separation = 122

[node name="Label" type="Label" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 175.0
margin_right = 504.0
margin_bottom = 205.0
text = "Direct IP Join:"

[node name="JoinBox" type="HBoxContainer" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 215.0
margin_right = 504.0
margin_bottom = 274.0
grow_horizontal = 2

[node name="Label" type="Label" parent="MainMenu/VBox/Center/VButtons/JoinBox"]
margin_top = 14.0
margin_right = 98.0
margin_bottom = 44.0
text = "Host IP: "

[node name="HostIp" type="LineEdit" parent="MainMenu/VBox/Center/VButtons/JoinBox"]
margin_left = 101.0
margin_right = 301.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 27 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "192.168.1.3"
expand_to_text_length = true
placeholder_text = "192.168.100.100"

[node name="Join" type="Button" parent="MainMenu/VBox/Center/VButtons/JoinBox"]
margin_left = 304.0
margin_right = 504.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 3 )
text = "Join"

[node name="HSeparator" type="HSeparator" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 284.0
margin_right = 504.0
margin_bottom = 399.0
custom_constants/separation = 115

[node name="Cancel" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 409.0
margin_right = 504.0
margin_bottom = 468.0
text = "Cancel"

[node name="Margin2" type="MarginContainer" parent="MainMenu/VBox"]
margin_top = 778.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 90

[node name="Label" type="Label" parent="MainMenu/VBox/Margin2"]
margin_top = 181.0
margin_right = 1920.0
margin_bottom = 211.0
text = "user folder:"
valign = 2

[node name="MenuTween" type="Tween" parent="."]

[connection signal="pressed" from="MainMenu/VBox/Center/VButtons/RoomsBox/RefreshButton" to="." method="_on_RefreshButton_pressed"]
